# libMstp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  PatternGenerator.cpp  PatternGenerator.hpp  Scale.hpp  main.cpp
src/libMstp/: CMakeLists.txt  PatternGenerator.cpp  PatternGenerator.hpp  PatternGenerator.test.cpp  Scale.hpp
